Props, Destructuring on the fly, Objects creation, Conflict driven UI, Map filter reduce, Keys

--- a/index.css
+++ b/index.css
@@ -26,8 +26,10 @@
 }
 
 .restCard {
-  width: 200px;
-  height: 365px; 
+  margin: 5px;
+  padding: 5px;
+  /* width: 30%; */
+  /* height: 500px;  */
 }
 
 .restCard:hover {
