--- a/index.css
+++ b/index.css
@@ -20,9 +20,7 @@
 
 .restContainer {
   display: flex; 
-  justify-content: space-around;
   flex-wrap: wrap;
- 
 }
 
 .restCard {
@@ -38,6 +36,10 @@
 }
 
 .search {
+  padding: 10px;
+}
+
+.filter {
   padding: 10px;
 }
 
